# shitty-ff

./: Cargo.toml  README.md
benches/: goldilocks.rs
src/: goldilocks.rs  lib.rs  montgomery.rs  tests.rs  util.rs
