[package]
name = "shitty-ff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = "0.4.2"
ark-serialize = "0.4.2"
ark-std = "0.4.0"
num-bigint = "0.4.4"
rand = "0.8.5"
zeroize = "1.7.0"

[dev-dependencies]
criterion = "0.5.1"
proptest = "1.4.0"

[[bench]]
name = "goldilocks"
harness = false
